# rv32sim

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  conanfile.txt  test_sub.dis
.github/workflows/: main.yml
base/: CMakeLists.txt  mmaped_file.cc  scoped_mmap.cc
base/include/base/: bit_utils.hh  helpers.hh  logger.hh  mmaped_file.hh  scoped_mmap.hh
conan_profiles/: common  debug  debug.profile  release  release.profile
main/: CMakeLists.txt  main.cc
sim/: CMakeLists.txt  decoder.cc  elfloader.cc  instruction.cc  instructions_registry.cc  rv32sim.cc
sim/include/sim/: arith_instruction.hh  basic_instruction.hh  config.hh  cpu.hh  decode_info.hh  decoder.hh  elfloader.hh  instruction.hh  instruction_templates.hh  instructions_registry.hh  memory.hh  opcodes.hh  operands.hh  register_file.hh  rv32sim.hh  state.hh  types.hh  unimplemented_instruction.hh
sim/include/sim/isa/rv32i/: arith.hh  branch.hh  jal.hh  load.hh  misc_mem.hh  rv32i.hh  store.hh  system.hh
sim/include/sim/isa/rv32im/: div.hh  mul.hh  rv32im.hh
sim/include/sim/isa/rv32imf/: arith.hh  load_fp.hh  rv32imf.hh  store_fp.hh
sim/include/sim/isa/rv32imf_zbb/: arith.hh  rv32imf_zbb.hh
sim/include/sim/rv32i/: rv32i.hh
tests/: CMakeLists.txt
